@@ -41,6 +41,13 @@ New Features
   faster intersection by avoiding loading positions in certain cases.
   (Paul Elschot, Robert Muir via Mike McCandless)
 
+Optimizations
+
+* LUCENE-6379: IndexWriter.deleteDocuments(Query...) now detects if
+  one of the queries is MatchAllDocsQuery and just invokes the much
+  faster IndexWriter.deleteAll in that case (Robert Muir, Adrien
+  Grand, Mike McCandless)
+
 ======================= Lucene 5.1.0 =======================
 
 New Features
